--- a/404.html
+++ b/404.html
@@ -1,27 +1,52 @@
-<!DOCTYPE html>
-
 <html>
 <head>
-
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>404 Page</title>
-
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <link href='http://fonts.googleapis.com/css?family=Francois+One|Bree+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 
 <body>
+
+  <div class="ui page grid">
+   <div class="Fourteen wide column top-bar">
+
   
-  <! -- Your Custom 404-->
+  <img class="ui image" src="logo.png">
+</div>
+
+ <div class="Fourteen wide column">
+
+<div id="headline">
+  <h1 class="message"> Oooops!  </h1>
+
+  <img src="img/404_error.gif">
+</div>
+
+<p>Oooops (404 Error) This page is under maintenance. <i class="frown icon"></i> </p>
+<p>A Facebook beautiful (of course) 404 error page from ILove Facebook.com </p>
+
+
+<div  class="ui facebook button">
+  <a href="https://www.facebook.com/">
+  <i class="facebook icon"></i>
+ Go to Facebook</a>
+
+</div>
+
+
+</div>  
+  
+  <h1>404 Page</h1>
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
+    <script src="js/squishy.js"></script>
   <script src="js/scripts.js"></script>
 
 </body>
-</html>
